css changes for margins

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div class="top-bar">
-  <h1>Budget Calculator</h1>
+  <h1 style="margin-bottom: 0px">Budget Calculator</h1>
 </div>
 
 <div class="total-budget-section">
