--- a/src/app/budget-item-list/budget-item-card/budget-item-card.component.html
+++ b/src/app/budget-item-list/budget-item-card/budget-item-card.component.html
@@ -5,10 +5,10 @@
     [ngClass]="{ income: item.amount >= 0, expense: item.amount < 0 }"
   >
     <div class="description">
-      <p>{{ item.description }}</p>
+      <p style="margin-bottom: 0px">{{ item.description }}</p>
     </div>
     <div class="amount">
-      <p>{{ item.amount }}</p>
+      <p style="margin-bottom: 0px">{{ item.amount }}</p>
     </div>
   </div>
   <div (click)="onXButtonClick()" class="x-icon-button"></div>
